--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,11 @@
 
 <head>
     <meta charset="UTF-8">
+    <style>
+        body{
+            min-width: 320px;
+        }
+    </style>
    </head>
 
 <body>
